--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="/Assets/css/style.css"/>
+
     <title>Work Day Scheduler</title>
   </head>
 
@@ -29,10 +30,62 @@
       <p id="currentDay" class="lead"></p>
     </header>
     <div class="container">
-      <!-- Timeblocks go here -->
+      <table class="table-container" id="table-contain" id="scroll">
+        <tr> 
+          <td class="col-1">Column 1</td>
+          <td class="col-2">Column 2</td>
+          <td class="col-3">Column 3</td>
+        </tr>
+        <tr> 
+          <td class="col-1">Column 1</td>
+          <td class="col-2">Column 2</td>
+          <td class="col-3">Column 3</td>
+        </tr>
+        <tr> 
+          <td class="col-1">Column 1</td>
+          <td class="col-2">Column 2</td>
+          <td class="col-3">Column 3</td>
+        </tr>
+        <tr> 
+          <td class="col-1">Column 1</td>
+          <td class="col-2">Column 2</td>
+          <td class="col-3">Column 3</td>
+        </tr>
+        <tr> 
+          <td class="col-1">Column 1</td>
+          <td class="col-2">Column 2</td>
+          <td class="col-3">Column 3</td>
+        </tr>
+        <tr> 
+          <td class="col-1">Column 1</td>
+          <td class="col-2">Column 2</td>
+          <td class="col-3">Column 3</td>
+        </tr><tr> 
+          <td class="col-1">Column 1</td>
+          <td class="col-2">Column 2</td>
+          <td class="col-3">Column 3</td>
+        </tr>
+        <tr> 
+          <td class="col-1">Column 1</td>
+          <td class="col-2">Column 2</td>
+          <td class="col-3">Column 3</td>
+        </tr>
+        <tr> 
+          <td class="col-1">Column 1</td>
+          <td class="col-2">Column 2</td>
+          <td class="col-3">Column 3</td>
+        </tr>
+        <tr> 
+          <td class="col-1">Column 1</td>
+          <td class="col-2">Column 2</td>
+          <td class="col-3">Column 3</td>
+        </tr>
+        <div id="end-scroll"></div>
+      </table>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <script src="./Assets/js/script.js"></script>
   </body>
 </html>
