--- a/index.html
+++ b/index.html
@@ -1,91 +1,120 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
-      integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf"
-      crossorigin="anonymous"
-    />
-    <link
-      href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap"
-      rel="stylesheet"
-    />
-    <link rel="stylesheet" href="/Assets/css/style.css"/>
 
-    <title>Work Day Scheduler</title>
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" />
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous" />
+  <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet" />
+  <link rel="stylesheet" href="./Assets/css/style.css" />
+  <title>Work Day Scheduler</title>
+</head>
+<!--hero section with date-->
+<body>
+  <header class="jumbotron bg-light">
+    <h1 class="text-dark font-weight-bold display-3">Work Day Scheduler</h1>
+    <p class="lead">A simple calendar application for scheduling your work day</p>
+    <p id="currentDay" class="lead"></p>
+  </header>
+  <!--Schedular container with hours-->
+  <div class="container">
 
-  <body>
-    <header class="jumbotron">
-      <h1 class="display-3">Work Day Scheduler</h1>
-      <p class="lead">A simple calendar app for scheduling your work day</p>
-      <p id="currentDay" class="lead"></p>
-    </header>
-    <div class="container">
-      <table class="table-container" id="table-contain" id="scroll">
-        <tr> 
-          <td class="col-1">Column 1</td>
-          <td class="col-2">Column 2</td>
-          <td class="col-3">Column 3</td>
-        </tr>
-        <tr> 
-          <td class="col-1">Column 1</td>
-          <td class="col-2">Column 2</td>
-          <td class="col-3">Column 3</td>
-        </tr>
-        <tr> 
-          <td class="col-1">Column 1</td>
-          <td class="col-2">Column 2</td>
-          <td class="col-3">Column 3</td>
-        </tr>
-        <tr> 
-          <td class="col-1">Column 1</td>
-          <td class="col-2">Column 2</td>
-          <td class="col-3">Column 3</td>
-        </tr>
-        <tr> 
-          <td class="col-1">Column 1</td>
-          <td class="col-2">Column 2</td>
-          <td class="col-3">Column 3</td>
-        </tr>
-        <tr> 
-          <td class="col-1">Column 1</td>
-          <td class="col-2">Column 2</td>
-          <td class="col-3">Column 3</td>
-        </tr><tr> 
-          <td class="col-1">Column 1</td>
-          <td class="col-2">Column 2</td>
-          <td class="col-3">Column 3</td>
-        </tr>
-        <tr> 
-          <td class="col-1">Column 1</td>
-          <td class="col-2">Column 2</td>
-          <td class="col-3">Column 3</td>
-        </tr>
-        <tr> 
-          <td class="col-1">Column 1</td>
-          <td class="col-2">Column 2</td>
-          <td class="col-3">Column 3</td>
-        </tr>
-        <tr> 
-          <td class="col-1">Column 1</td>
-          <td class="col-2">Column 2</td>
-          <td class="col-3">Column 3</td>
-        </tr>
-        <div id="end-scroll"></div>
-      </table>
+    <div id="hour8" class="row time-block">
+      <div class="col-md-1 hour">
+        8:00am
+      </div>
+      <textarea class="col-md-10 description">
+            </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
     </div>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <div id="hour9" class="row time-block">
+      <div class="col-md-1 hour">
+        9:00am
+      </div>
+      <textarea class="col-md-10 description">
+            </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+
+    <div id="hour10" class="row time-block">
+      <div class="col-md-1 hour">
+        10:00am
+      </div>
+      <textarea class="col-md-10 description">
+            </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+
+    <div id="hour11" class="row time-block">
+      <div class="col-md-1 hour">
+        11:00am
+      </div>
+      <textarea class="col-md-10 description">
+            </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+
+    <div id="hour12" class="row time-block">
+      <div class="col-md-1 hour">
+        12:00pm
+      </div>
+      <textarea class="col-md-10 description">
+            </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+
+    <div id="hour13" class="row time-block">
+      <div class="col-md-1 hour">
+        1:00pm
+      </div>
+      <textarea class="col-md-10 description">
+            </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+
+    <div id="hour14" class="row time-block">
+      <div class="col-md-1 hour">
+        2:00pm
+      </div>
+      <textarea class="col-md-10 description">
+            </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+
+    <div id="hour15" class="row time-block">
+      <div class="col-md-1 hour">
+        3:00pm
+      </div>
+      <textarea class="col-md-10 description">
+            </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+
+    <div id="hour16" class="row time-block">
+      <div class="col-md-1 hour">
+        4:00pm
+      </div>
+      <textarea class="col-md-10 description">
+            </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+
+    <div id="hour17" class="row time-block">
+      <div class="col-md-1 hour">
+        5:00pm
+      </div>
+      <textarea class="col-md-10 description">
+            </textarea>
+      <button class="btn saveBtn col-md-1"><i class="fas fa-save"></i></button>
+    </div>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="./Assets/js/script.js"></script>
-  </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.27.0/moment.min.js"></script>
+</body>
+
 </html>
